src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/Neq_Int.deca
//Description:
//  Vérification contextuelle du type de sortie de != différent de int.
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible
{
    int x = 1!=1;
}